[gd_scene load_steps=8 format=4 uid="uid://s75g1ht7pbpu"]

[ext_resource type="Script" uid="uid://c5p4uct15xguo" path="res://instances/exit_door.gd" id="1_0p81x"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l51ke"]
resource_name = "glass"
transparency = 4
cull_mode = 2
albedo_color = Color(0.0448822, 0.18354, 0.111227, 0.135688)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s2ip1"]
resource_name = "shiny_metal"
cull_mode = 2
albedo_color = Color(0.449356, 0.449356, 0.449356, 1)
metallic = 1.0
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_1m7xa"]
_surfaces = [{
"aabb": AABB(-1.65567, 0.212409, -0.00591767, 3.31133, 3.95018, 0.0118368),
"format": 34896613377,
"index_count": 24,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0A"),
"name": "glass",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AAC/hwEAAAD/////AAAAAP//v4cAAAAAAAD//wEAAAD//7+H/f8AAAAA/////wAAAAC/h///AAD//////f8AAAAAAAABAAAA//8/eAAAAAD//wAAAAAAAAAAP3gBAAAA//8AAP3/AAAAAD94//8AAAAAAAD//wAA//8/eP3/AAA=")
}, {
"aabb": AABB(-1.8625, 0, -0.0403692, 3.725, 4.375, 0.0807384),
"format": 34359742465,
"index_count": 372,
"index_data": PackedByteArray("FgAXAAQABAAYABYAFwAZAAQABAAZABgAGQAXABoAFgAbABcAHAAXABsAGgAXABwAHAAbAB0AGgAcAB0AGQAaAB4AHgAYABkAHgAaAB8AHgACABgAGgAdAAUAHwAaAAUAHgAfACAAIAACAB4AIAAfAAYAIAAGAAAAIQAGAB8AAAAGACEAIQAfAAcAHwAFAAcAAAAhACIAIgAgAAAAIgAhACMABwAjACEAIgABACAABQABAAcAIAABAAIABQACAAEACAACAAUACAAFAB0AAQAiACQAIgAjACQABwABAAkAAQAkAAkABwAKACMABwAJAAoAJAAjACUAJQAjAAoAJgAJACQAJAAlACYAJgANAAkACgAJAAwADAAJAA0ACgAMAAgAJQAKAAsACAALAAoACAAMAAIADAAYAAIAJgAlACcACwAnACUAJgAnACgADQAmACgADAApABgAKQAWABgAKQAMAA4ADAANAA4AKQAqABYAKgAbABYAKgApACsAKQAOACsAKgAsABsALAAdABsAKgArAC0ALQAsACoALAAuAB0ACAAdAC4ALQAvACwALgAsAC8ALgAPAAgADwAOAA0ALgAvADAALgAwAA8ACAAPAAsADwANAAsAFQAOAA8AFQAPADAACwANABAADQAoABAAMQAwAC8AMgAvAC0AMgAxAC8AMwAyAC0AMwAtACsAEwAxADIAMgAzADQAMgA0ABMAFAAzACsAFAArAA4AFAA0ADMAFQAUAA4ANAA1ABMAEwA1ADEAMQA2ADAANgAxADUAFQAwADYANgA1ADcAFQA2ADcANQA4ADcAFQA3ADgANAA4ADUAEgAUABUAEgAVADgAFAA5ADQAOAA0ADkAEAA5ABQAEgAQABQAOgA4ADkAEAA6ADkAOgA7ADgAEgA4ADsACwAQABIACwASACcAAwA6ABAAAwA7ADoAAwAQACgAEQASADsAAwARADsAEQAnABIAKAARAAMAKAAnABEA"),
"lods": [0.0445386, PackedByteArray("AAABAAIAAQAAAAMAAAACAAQABQACAAEAAAAGAAMAAAAEAAYABgAEAAUABQABAAcABgAFAAcACAACAAUACAAFAAQABwABAAkAAQADAAkABwAKAAYABwAJAAoABgAKAAsACAALAAoACgAJAAwACgAMAAgACAAMAAIADAAEAAIADAAJAA0AAwANAAkABAAMAA4ADAANAA4ABAAPAAgACAAPAAsADwAOAA0ADwANAAsACwANABAADQADABAACwARAAYAAwAGABEACwASABEACwAQABIAAwARABMAEgATABEAEAADABQAEgAQABQAFAADABMABAATAA8AFAATAAQAFAAEAA4AFQAPABMAEgAVABMAFQAOAA8AEgAUABUAFQAUAA4A")],
"name": "shiny_metal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray("aGbuPwAAjEDaWSU96OzTP/EzhUDeWSU96OzTv/EzhUAiWiU9aGbuPwAAAADaWSU9aGbuvwAAjEBL+Ok86OzTv/EzhUDeWSW9aGbuPwAAjEAmWiW96OzTP/EzhUAiWiW96OzTv/KmE0DeWSW96OzTP/KmE0DeWSU96OzTP/KmE0AiWiW96OzTPw5ZBEAiWiW96OzTv/KmE0AiWiU96OzTPw5ZBEDeWSU96OzTvw5ZBEAiWiU96OzTvw5ZBEDeWSW96OzTP9iBWT7eWSU9aGbuPwAAAAAmWiW96OzTP9iBWT4iWiW9aGbuvwAAAABL+Ok86OzTv9iBWT4iWiU96OzTv9iBWT7eWSW9aGbuv/EzhUBL+Ok8aGbuvwAAjEC19+m8duPsv/EzhUAmWiU9duPsvwAAjEAmWiU96OzTvwAAjEDeWSW9aGbuv/EzhUC19+m8duPsvwAAjEDaWSW9duPsv/EzhUDaWSW96OzTvwAAjEAiWiU96OzTPwAAjEAiWiW96OzTPwAAjEDeWSU9aGbuP/EzhUAmWiW9aGbuP/EzhUDaWSU9aGbuP/KmE0AmWiW9aGbuP/KmE0DaWSU9aGbuPw5ZBEAmWiW9aGbuPw5ZBEDaWSU9aGbuP9iBWT4mWiW9aGbuP9iBWT7aWSU9duPsv/KmE0AmWiU9aGbuv/KmE0BL+Ok8duPsvw5ZBEAmWiU9aGbuv/KmE0C19+m8aGbuvw5ZBEBL+Ok8duPsv/KmE0DaWSW9aGbuvw5ZBEC19+m8duPsvw5ZBEDaWSW9aGbuv9iBWT619+m8aGbuv9iBWT5L+Ok8duPsv9iBWT4mWiU9duPsvwAAAAAmWiU9aGbuvwAAAAC19+m8duPsv9iBWT7aWSW9duPsvwAAAADaWSW96OzTvwAAAADeWSW96OzTvwAAAAAiWiU96OzTPwAAAADeWSU96OzTPwAAAAAiWiW9")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_whwrs"]
resource_name = "supermarket_models_Plane_028"
_surfaces = [{
"aabb": AABB(-1.65567, 0.212409, -0.00591767, 3.31133, 3.95018, 0.0118368),
"attribute_data": PackedByteArray("AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//wAA//8AAP//AAD//w=="),
"format": 34896613399,
"index_count": 24,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0A"),
"material": SubResource("StandardMaterial3D_l51ke"),
"name": "glass",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 16,
"vertex_data": PackedByteArray("AAC/hwEA/n//////AAD+f///v4cAAP5/AAD//wEA/n///7+H/f///wAA////////AAC/h////////////f///wAAAAABAP5///8/eAAA/n///wAAAAD+fwAAP3gBAP5///8AAP3///8AAD94/////wAAAAD///////8/eP3/////f////3////9/////f///////f////3////9/////f/9/////f////3////9///////9/////f////3////9/")
}, {
"aabb": AABB(-1.8625, 0, -0.0403692, 3.725, 4.375, 0.0807384),
"attribute_data": PackedByteArray("AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8AAAAAAACAPwAAAAAAAIA/AAAAAAAAgD8="),
"format": 34359742487,
"index_count": 372,
"index_data": PackedByteArray("QgBDABgAQgBEAEMARQBEAEIARQBGAEQARwBGAEUARwBIAEYASQBIAEcASQBKAEgAHQBKAEkAHQBLAEoATAACAE0ATQACAE4ATQBOAE8ATAABAAIABQBOAAIAUAABAEwAUABMAAAAAQBQAFEAAQBRAAYABQBSAE4AUwAGAFEAUgAFAAgAUgAIAFQABQAGAAcAUwAHAAYABQAHAAgABwBTAFUACgBUAAgACgBWAFQACgBXAFYACgBYAFcABwBVAAkACQBYAAoABAAJAFUACQBZAFgABABZAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAGwAeAFoAHgBbAFoAGwBcAB4AHgAfAFsAHwBdAFsAHwBeAF0AHwBfAF4AHwAcAF8AGgAeAFwAYABfABwAGgBcAGEAYAAcABkAGQAcABoAGQBiAGAAYQAXABoAGQAaABcAYQBjABcAFgAXAGMAGQAVAGIAFgBjAGQAZABlABYAZQAVABYAZAAUAGUAZQBmABUAZgBiABUAZgBnAGIAIAAhACIAIAAjACEAJAAlACYAJAAnACUAKABoAGkAKAApAGgAaQBoAGoAaQBqAGsAagBsAGsAbABqAG0AbQBqAG4AbABtACoALgBvAHAALgAvAG8AcABvAHEAcABxAHIAcgBxAHMAcgBzAHQAdABzAHUAdAB1AHYAdgB1ADEAdgAxADAAdwB4AHkAeQB4AC0AeQAtACsAdwB6AHgAewB6AHcAewB8AHoAegB8AH0AfAB7ACwAMgAzADQAMgA1ADMANgA3ADgANgA5ADcAOgA7ADwAOgA9ADsAPgA/AEAAPgBBAD8AAwB+AH8AAwCAAH4AgQB/AH4AgQCCAH8AggCBAIMAggCDAIQAhQCEAIMAhQCGAIQAhgCFAIcAhgCHAAsAiACJAIoAiACLAIkAjACKAIkAjACNAIoAjQCMAI4AjQCOAI8AkACPAI4AkACRAI8AkQCQAJIAkQCSAJMA"),
"lods": [0.0445386, PackedByteArray("AAABAAIAAAACAAMAAQAAAAQABQADAAIAAQAEAAYABQAGAAcABAAHAAYABQAHAAgAAwAFAAgABwAEAAkACgADAAgACQAEAAoACgALAAMACgAEAAsADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFgAXABQAFAAYABUAGQAVABgAFAAXABoAGQAaABcAGgAbABQAGAAcABkAGQAcABoAGAAdABwAGgAeABsAHgAdABsAHgAfAB0AHwAcAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKwAsAC0ALgAvADAAMAAvADEAMgAzADQAMgA1ADMANgA3ADgANgA5ADcAOgA7ADwAOgA9ADsAPgA/AEAAPgBBAD8A")],
"material": SubResource("StandardMaterial3D_s2ip1"),
"name": "shiny_metal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 148,
"vertex_data": PackedByteArray("aGbuPwAAjEDaWSU96OzTP/EzhUDeWSU96OzTv/EzhUAiWiU9aGbuvwAAjEBL+Ok8aGbuPwAAAADaWSU96OzTv/KmE0AiWiU96OzTP/KmE0DeWSU96OzTPw5ZBEDeWSU96OzTvw5ZBEAiWiU96OzTP9iBWT7eWSU96OzTv9iBWT4iWiU9aGbuvwAAAABL+Ok86OzTvw5ZBEDeWSW96OzTPw5ZBEDeWSU96OzTPw5ZBEAiWiW96OzTvw5ZBEAiWiU96OzTP/KmE0AiWiW96OzTv/KmE0AiWiU96OzTv/KmE0DeWSW96OzTP/KmE0DeWSU9aGbuPwAAjEAmWiW96OzTv/EzhUDeWSW96OzTP/EzhUAiWiW96OzTP/KmE0AiWiW9aGbuvwAAjEBL+Ok86OzTv/KmE0DeWSW96OzTPw5ZBEAiWiW9aGbuPwAAAAAmWiW96OzTvw5ZBEDeWSW9aGbuvwAAAABL+Ok86OzTP9iBWT4iWiW96OzTv9iBWT7eWSW96OzTv9iBWT7eWSW96OzTvw5ZBEAiWiU96OzTvw5ZBEDeWSW96OzTv9iBWT4iWiU96OzTP/EzhUAiWiW96OzTP/KmE0DeWSU96OzTP/KmE0AiWiW96OzTP/EzhUDeWSU9aGbuPwAAAADaWSU9aGbuPwAAAAAmWiW9aGbuvwAAAABL+Ok8aGbuPwAAjEDaWSU9aGbuvwAAjEBL+Ok8aGbuPwAAjEAmWiW9aGbuPwAAjEDaWSU9aGbuPwAAjEAmWiW9aGbuPwAAAADaWSU9aGbuPwAAAAAmWiW96OzTPw5ZBEAiWiW96OzTP9iBWT7eWSU96OzTP9iBWT4iWiW96OzTPw5ZBEDeWSU96OzTP9iBWT4iWiW96OzTv9iBWT4iWiU96OzTv9iBWT7eWSW96OzTP9iBWT7eWSU96OzTv/KmE0DeWSW96OzTv/EzhUAiWiU96OzTv/EzhUDeWSW96OzTv/KmE0AiWiU96OzTv/EzhUDeWSW96OzTP/EzhUDeWSU96OzTP/EzhUAiWiW96OzTv/EzhUAiWiU9aGbuv/EzhUBL+Ok8aGbuvwAAjEC19+m8aGbuv/EzhUC19+m8aGbuv/KmE0BL+Ok8aGbuv/KmE0C19+m8aGbuvw5ZBEBL+Ok8aGbuvw5ZBEC19+m8aGbuv9iBWT5L+Ok8aGbuv9iBWT619+m8aGbuvwAAAAC19+m86OzTPwAAjEDeWSU96OzTvwAAjEAiWiU9duPsv/EzhUAmWiU9duPsvwAAjEAmWiU9aGbuP/EzhUDaWSU9aGbuP/KmE0DaWSU9duPsv/KmE0AmWiU9aGbuPw5ZBEDaWSU9duPsvw5ZBEAmWiU9aGbuP9iBWT7aWSU9duPsv9iBWT4mWiU9duPsvwAAAAAmWiU96OzTvwAAAAAiWiU96OzTPwAAAADeWSU96OzTPwAAAAAiWiW96OzTvwAAAADeWSW9aGbuP9iBWT4mWiW9duPsvwAAAADaWSW9duPsv9iBWT7aWSW9duPsvw5ZBEDaWSW9duPsv/KmE0DaWSW9aGbuPw5ZBEAmWiW9duPsv/EzhUDaWSW9aGbuP/KmE0AmWiW9aGbuP/EzhUAmWiW96OzTPwAAjEAiWiW96OzTvwAAjEDeWSW9duPsvwAAjEDaWSW96OzTPwAAAAAiWiW96OzTPwAAAADeWSU96OzTvwAAAADeWSW96OzTvwAAAAAiWiU9duPsvwAAAAAmWiU9aGbuvwAAAAC19+m8duPsvwAAAADaWSW9aGbuP/EzhUAmWiW9aGbuP/EzhUDaWSU9aGbuP/KmE0AmWiW9aGbuP/KmE0DaWSU9aGbuPw5ZBEAmWiW9aGbuPw5ZBEDaWSU9aGbuP9iBWT4mWiW9aGbuP9iBWT7aWSU96OzTvwAAjEAiWiU96OzTPwAAjEAiWiW96OzTPwAAjEDeWSU96OzTvwAAjEDeWSW9duPsvwAAjEAmWiU9aGbuvwAAjEC19+m8duPsvwAAjEDaWSW9duPsv/EzhUAmWiU9aGbuv/EzhUBL+Ok8duPsvwAAjEAmWiU9duPsv/KmE0AmWiU9aGbuv/KmE0BL+Ok8duPsvw5ZBEAmWiU9aGbuvw5ZBEBL+Ok8duPsv9iBWT4mWiU9aGbuv9iBWT5L+Ok8duPsvwAAAAAmWiU9duPsvwAAjEDaWSW9aGbuv/EzhUC19+m8duPsv/EzhUDaWSW9aGbuvwAAjEC19+m8aGbuv/KmE0C19+m8duPsv/KmE0DaWSW9aGbuvw5ZBEC19+m8duPsvw5ZBEDaWSW9aGbuv9iBWT619+m8duPsv9iBWT7aWSW9aGbuvwAAAAC19+m8duPsvwAAAADaWSW9/3//f////z//f/9/////P/9//3////8//z//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/8//3////8//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//f///////v/9///////+//3///////7//f///////v/////////+//////////7//////////v/////////+/AAD/f////7//////////v/////////+//////////7//////////vwAA/3////+//////////7//////////v////3////+/////f////7////9/////v////3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//fwAA////v/9/AAD///+//38AAP///7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+//3///////7//f///////v/9///////+//3///////7////9/////v////3////+/////f////7////9/////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////78AAP9/////vwAA/3////+/AAD/f////7//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//3//f////z//f/9/////P/9//3////8//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/////////+//////////7//////////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/////f////7////9/////v////3////+/////f////7////9/////v////3////+/////f////7////9/////v/9///////+//3///////7//f///////v/9///////+//3///////7//f///////v/9///////+//z//f////z//P/9/////P/8//3////8//z//f////z//P/9/////P/8//3////8//z//f////z//P/9/////P/8//3////8//z//f////z8AAP+/////vwAA/7////+/AAD/v////78AAP+/////vwAA/7////+/AAD/v////78AAP+/////vwAA/7////+/AAD/v////78AAP+/////vwAA/7////+/AAD/v////78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_1m7xa")

[sub_resource type="BoxShape3D" id="BoxShape3D_jj5tr"]
size = Vector3(0.120117, 4.41196, 3.72168)

[sub_resource type="BoxShape3D" id="BoxShape3D_0p81x"]
size = Vector3(5, 4.34336, 7)

[node name="exit_door" type="Node3D"]
script = ExtResource("1_0p81x")

[node name="SlidingDoor" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
mesh = SubResource("ArrayMesh_whwrs")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="SlidingDoor"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SlidingDoor/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.19102, 0)
shape = SubResource("BoxShape3D_jj5tr")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 8
collision_mask = 18
monitorable = false

[node name="coll_area" type="CollisionShape3D" parent="Area3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.47648, 2.14849, -0.0117188)
shape = SubResource("BoxShape3D_0p81x")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
